# tray-host

./: Cargo.toml  README.md  README_zh.md  config_example.toml  dist-workspace.toml  flake.nix
src/: cli.rs  config.rs  lib.rs  socket.rs
