[package]
name = "tray-host"
description = "Headless StatusNotifierItem host — system tray daemon for use with external launchers like fuzzel/rofi/dmenu"
repository = "https://github.com/Levizor/tray-tui"
homepage = "https://github.com/Levizor/tray-tui"

version = "0.4.0"
authors = [
  "Levizor <levizor@disroot.org>",
  "EliasDevis <elias.devis@protonmail.com>",
]
license = "MIT"
edition = "2021"

[lib]
name = "tray_host"
path = "src/lib.rs"

[[bin]]
name = "tray-host"
path = "src/bin/tray-host.rs"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
clap_complete = "4.5.57"
config = "0.15.15"
dirs = "6.0.0"
log = "0.4.28"
png = "0.18.1"
serde = { version = "1.0.219", features = ["serde_derive", "derive"] }
simplelog = "0.12.2"
system-tray = { version = "0.8.4" }
tokio = { version = "1.47.1", features = ["full"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
